<resources>
    <string name="app_name">Bipper App</string>
    <string name="message">Veuillez saisir vos informqtions</string>
    <string name="hint_nom">Votre nom</string>
    <string name="hint_prenom">Votre prenom</string>
    <string name="hint_tel">Votre telephone</string>
    <string name="hint_bouton_eng">S\&apos;Enregistrer</string>
    <string name="hint_pwd">Votre mot de passe</string>
    <string name="hint_confpwd">Confirmer votre mot de passe</string>
    <string name="hint_mail">Votre mail</string>
    <string name="hint_bienvenue">Bienvenue</string>
    <string name="hint_help">Veuillez sélectionner &quot;s&apos;enregistrer&quot; pour créer un compte ou &quot;se connecter&quot; si vous avez déjà un.</string>
    <string name="hint_signin">Se connecter</string>
    <string name="hint_register">S\&apos;enregistrer</string>
    <string name="hint_img_desc_logo">Logo</string>
    <string name="please_wait">Merci de patienter</string>
    <string name="inscription_ok">Inscription validée</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login .... -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Le courriel est invalide</string>
    <string name="error_invalid_password">le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_ok">Connection validée</string>
    <string name="txt_buzz">Buzzer</string>
    <string name="status_connected">Connecté</string>
    <string name="status_not_connected">Pas connecté</string>
</resources>
